--- a/NullProject/www/css/style.css
+++ b/NullProject/www/css/style.css
@@ -7,3 +7,13 @@
     background-attachment: fixed;
     background-position: center;
 }
+
+map {
+    display: block;
+    width: 100%;
+    height: 70%;
+}
+
+.scroll {
+    height: 100%;
+}
