--- a/NullProject/www/css/style.css
+++ b/NullProject/www/css/style.css
@@ -1,11 +1,19 @@
 /* Empty. Add your own CSS if you like */
 
-.fundo-wonder {
-    background-color: black;
-    background-image: url('../img/wonder.png');
+.fundo {
+    background-color: #C5FBFB;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+}
+
+.icon{
+    width:100%;
+}
+
+.button-nature{
+    background-color:#40C6C6;
+    color:white;
 }
 
 map {
